--- a/Server/web/WEB-INF/web.xml
+++ b/Server/web/WEB-INF/web.xml
@@ -3,24 +3,7 @@
         xmlns="http://java.sun.com/xml/ns/javaee"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-        version="3.0">
-    <servlet>
-        <servlet-name>HibernateTest</servlet-name>
-        <servlet-class>com.groceryotg.server.HibernateUtils</servlet-class>
-    </servlet>
-    
-    <servlet>
-        <servlet-name>WordNet</servlet-name>
-        <servlet-class>com.groceryotg.server.sampleWordNetClass</servlet-class>
-    </servlet>
+        version="3.0"
+        metadata-complete="false">
 
-    <servlet-mapping>
-        <servlet-name>HibernateTest</servlet-name>
-        <url-pattern>/Test</url-pattern>
-    </servlet-mapping>
-    
-    <servlet-mapping>
-        <servlet-name>WordNet</servlet-name>
-        <url-pattern>/Word</url-pattern>
-    </servlet-mapping>
 </web-app>
