--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -48,16 +48,16 @@
         <!--</dependency>-->
 
         <!-- Hibernate c3p0 connection pool -->
-        <dependency>
-            <groupId>c3p0</groupId>
-            <artifactId>c3p0</artifactId>
-            <version>0.9.1.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-c3p0</artifactId>
-            <version>3.6.3.Final</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>c3p0</groupId>-->
+            <!--<artifactId>c3p0</artifactId>-->
+            <!--<version>0.9.1.2</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.hibernate</groupId>-->
+            <!--<artifactId>hibernate-c3p0</artifactId>-->
+            <!--<version>3.6.3.Final</version>-->
+        <!--</dependency>-->
 
         <!-- Logging -->
         <dependency>
