--- a/GroceryOTG/AndroidManifest.xml
+++ b/GroceryOTG/AndroidManifest.xml
@@ -1,32 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.groceryotg.android"
-          android:versionCode="1"
-          android:versionName="1.0">
+    package="com.groceryotg.android"
+    android:versionCode="1"
+    android:versionName="1.0">
 
-    <uses-sdk android:minSdkVersion="8"
-              android:targetSdkVersion="16"/>
+    <uses-sdk
+        android:minSdkVersion="8"
+        android:targetSdkVersion="16" />
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <permission
+        android:name="com.groceryotg.android.GroceryMapView.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
 
-    <application android:label="@string/app_name"
-                 android:icon="@drawable/ic_launcher"
-                 android:theme="@style/AppTheme">
+    <uses-permission android:name="com.groceryotg.android.GroceryMapView.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 
-        <activity android:name=".GroceryOverView"
-                  android:label="@string/app_name">
+    <application
+        android:label="@string/app_name"
+        android:icon="@drawable/ic_launcher"
+        android:theme="@style/AppTheme">
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyDzLfi42UpxNSCITqOSlUURhMXj3i6N4BQ" />
+
+        <activity
+            android:name=".GroceryOverView"
+            android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <service android:name=".Services.UpdateGroceryService"/>
-        <service android:name=".Services.LocationMonitorService"/>
+        <activity
+            android:name=".GroceryMapView"
+            android:label="@string/app_name"
+            android:parentActivityName=".GroceryOverView" />
 
-        <receiver android:name=".Services.LocationMonitor"/>
+        <service android:name=".Services.NetworkHandler" />
+        <service android:name=".Services.Location.LocationMonitorService" />
+
+        <receiver android:name=".Services.Location.LocationMonitor" />
 
     </application>
+
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
 </manifest>
