--- a/GroceryOTG/AndroidManifest.xml
+++ b/GroceryOTG/AndroidManifest.xml
@@ -41,10 +41,15 @@
             android:label="@string/app_name"
             android:parentActivityName=".GroceryOverView" />
 
-        <service android:name=".Services.NetworkHandler" />
-        <service android:name=".Services.Location.LocationMonitorService" />
+        <service android:name=".services.NetworkHandler" />
+        <service android:name=".services.Location.LocationMonitorService" />
 
-        <receiver android:name=".Services.Location.LocationMonitor" />
+        <receiver android:name=".services.Location.LocationMonitor" />
+
+        <provider
+            android:name=".database.contentprovider.GroceryotgProvider"
+            android:authorities="com.groceryotg.android.database.contentprovider">
+        </provider>
 
     </application>
 
