--- a/GroceryOTG/AndroidManifest.xml
+++ b/GroceryOTG/AndroidManifest.xml
@@ -28,7 +28,7 @@
             android:value="AIzaSyDzLfi42UpxNSCITqOSlUURhMXj3i6N4BQ" />
 
         <activity
-            android:name=".GroceryOverView"
+            android:name=".CategoryOverView"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,9 +37,15 @@
         </activity>
 
         <activity
+            android:name=".GroceryOverView"
+            android:label="@string/app_name"
+            android:parentActivityName="com.groceryotg.android.CategoryOverView">
+        </activity>
+
+        <activity
             android:name=".GroceryMapView"
             android:label="@string/app_name"
-            android:parentActivityName=".GroceryOverView" />
+            android:parentActivityName="com.groceryotg.android.CategoryOverView" />
 
         <service android:name=".services.NetworkHandler" />
         <service android:name=".services.Location.LocationMonitorService" />
