Add release key and corresponding Google API Key

--- a/GroceryOTG/AndroidManifest.xml
+++ b/GroceryOTG/AndroidManifest.xml
@@ -25,7 +25,9 @@
         android:theme="@style/AppTheme">
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyDzLfi42UpxNSCITqOSlUURhMXj3i6N4BQ" />
+            android:value="AIzaSyC7c-p21lKScqO8KfLZ_ro1SvD0v-I7bX4" />
+        <!--use this if you are using debug.keystore-->
+        <!--android:value="AIzaSyDzLfi42UpxNSCITqOSlUURhMXj3i6N4BQ" />-->
 
         <activity
             android:name=".CategoryOverView"
