--- a/GroceryOTG/ant.properties
+++ b/GroceryOTG/ant.properties
@@ -15,3 +15,7 @@
 #  'key.alias' for the name of the key to use.
 # The password will be asked during the build when you use the 'release' target.
 
+key.store=./release.keystore
+key.alias=mykey
+key.store.password=groceryotg
+key.alias.password=groceryotg
