--- a/GroceryOTG/AndroidManifest.xml
+++ b/GroceryOTG/AndroidManifest.xml
@@ -46,6 +46,18 @@
         </activity>
 
         <activity
+            android:name=".ShopCartOverView"
+            android:label="@string/app_name"
+            android:parentActivityName="com.groceryotg.android.CategoryOverView">
+        </activity>
+
+        <activity
+            android:name=".ShopCartDetailView"
+            android:label="@string/app_name"
+            android:parentActivityName="com.groceryotg.android.ShopCartOverView">
+        </activity>
+
+        <activity
             android:name=".GroceryMapView"
             android:label="@string/app_name"
             android:parentActivityName="com.groceryotg.android.CategoryOverView" />
