--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ lint.xml
 
 # Local configuration file (sdk path, etc)
 local.properties
+project.properties
 
 # Eclipse project files
 .classpath
