--- a/GroceryOTG/AndroidManifest.xml
+++ b/GroceryOTG/AndroidManifest.xml
@@ -22,9 +22,14 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:allowBackup="true"
         android:label="@string/app_name"
         android:icon="@drawable/ic_launcher"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.Sherlock.Light">
+        <!--android:theme can be one of the following: Theme.Sherlock, Theme.Sherlock.Light, or 
+         Theme.Sherlock.Light.DarkActionBar, or your custom theme must use one of the 
+         aforementioned as its parent. -->
+         
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyDzLfi42UpxNSCITqOSlUURhMXj3i6N4BQ" />
