--- a/GroceryOTG/AndroidManifest.xml
+++ b/GroceryOTG/AndroidManifest.xml
@@ -5,9 +5,9 @@
     android:versionName="1.0">
 
     <uses-sdk
-        android:minSdkVersion="15"
-        android:targetSdkVersion="16" />
-
+        android:minSdkVersion="14"
+        android:targetSdkVersion="17" />
+	
     <permission
         android:name="com.groceryotg.android.GroceryMapView.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
@@ -51,38 +51,35 @@
 
         <activity
             android:name=".GroceryOverView"
-            android:label="@string/app_name"
-            android:parentActivityName="com.groceryotg.android.CategoryOverView">
+            android:label="@string/app_name">
         </activity>
 
         <activity
             android:name=".ShopCartOverView"
-            android:label="@string/app_name"
-            android:parentActivityName="com.groceryotg.android.CategoryOverView">
+            android:label="@string/app_name">
         </activity>
-
+        
         <activity
             android:name=".ShopCartDetailView"
-            android:label="@string/app_name"
-            android:parentActivityName="com.groceryotg.android.ShopCartOverView">
+            android:label="@string/app_name">
         </activity>
 
         <activity
             android:name=".GroceryMapView"
-            android:label="@string/app_name"
-            android:parentActivityName="com.groceryotg.android.CategoryOverView" />
+            android:label="@string/app_name">
+        </activity>
 
         <service android:name=".services.NetworkHandler" />
-        <service android:name=".services.Location.LocationMonitorService" />
-
-        <receiver android:name=".services.Location.LocationMonitor" />
-        <receiver android:name=".services.Location.LocationReceiver" />
+        <service android:name="com.groceryotg.android.services.Location.LocationMonitorService" />
+		
+        <receiver android:name="com.groceryotg.android.services.Location.location$LocationMonitor" />
+        <receiver android:name="com.groceryotg.android.services.Location.location$LocationReceiver" />
 
         <provider
             android:name=".database.contentprovider.GroceryotgProvider"
             android:authorities="com.groceryotg.android.database.contentprovider">
         </provider>
-
+	
     </application>
 
 </manifest>
