--- a/GroceryOTG/AndroidManifest.xml
+++ b/GroceryOTG/AndroidManifest.xml
@@ -59,6 +59,11 @@
             android:name=".GroceryOverView"
             android:label="@string/app_name"
             android:uiOptions="splitActionBarWhenNarrow">
+            <intent-filter>
+	            <action android:name="android.intent.action.SEARCH" />
+	        </intent-filter>
+	        <meta-data android:name="android.app.searchable"
+	                   android:resource="@xml/searchable"/>
         </activity>
 
         <activity
@@ -75,7 +80,17 @@
             android:name=".GroceryMapView"
             android:label="@string/app_name">
         </activity>
-
+        
+        <!-- 
+        <activity android:name=".utils.SearchableActivity" >
+	        <intent-filter>
+	            <action android:name="android.intent.action.SEARCH" />
+	        </intent-filter>
+	        <meta-data android:name="android.app.searchable"
+	                   android:resource="@xml/searchable"/>
+	    </activity>
+		-->
+		
         <service android:name=".services.NetworkHandler" />
         <service android:name="com.groceryotg.android.services.Location.LocationMonitorService" />
 		
