--- a/GroceryOTG/AndroidManifest.xml
+++ b/GroceryOTG/AndroidManifest.xml
@@ -56,7 +56,7 @@
         </activity>
 
         <activity
-            android:name=".GroceryOverView"
+            android:name=".groceryoverview.GroceryOverView"
             android:label="@string/app_name"
             android:uiOptions="splitActionBarWhenNarrow">
             <intent-filter>
