--- a/GroceryOTG/AndroidManifest.xml
+++ b/GroceryOTG/AndroidManifest.xml
@@ -29,7 +29,7 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:icon="@drawable/ic_launcher"
-        android:theme="@style/Theme.Sherlock.Light">
+        android:theme="@style/Theme.Sherlock.Light.DarkActionBar">
         <!--android:theme can be one of the following: Theme.Sherlock, Theme.Sherlock.Light, or 
          Theme.Sherlock.Light.DarkActionBar, or your custom theme must use one of the 
          aforementioned as its parent. -->
