--- a/GroceryOTG/project.properties
+++ b/GroceryOTG/project.properties
@@ -8,6 +8,6 @@
 # project structure.
 
 # Project target.
-target=android-16
-android.library.reference.1=libs\\ActionBarSherlock
+target=Google Inc.:Google APIs:17
+android.library.reference.1=libs/ActionBarSherlock
 android.library.reference.2=libs/SlidingMenu
