--- a/GroceryOTG/AndroidManifest.xml
+++ b/GroceryOTG/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <uses-sdk
         android:minSdkVersion="14"
-        android:targetSdkVersion="17" />
+        android:targetSdkVersion="16" />
 	
     <permission
         android:name="com.groceryotg.android.GroceryMapView.permission.MAPS_RECEIVE"
@@ -34,10 +34,10 @@
          Theme.Sherlock.Light.DarkActionBar, or your custom theme must use one of the 
          aforementioned as its parent. -->
          
+         <!--android:value="AIzaSyDzLfi42UpxNSCITqOSlUURhMXj3i6N4BQ" />-->
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyDzLfi42UpxNSCITqOSlUURhMXj3i6N4BQ" />
-        <!--android:value="AIzaSyC7c-p21lKScqO8KfLZ_ro1SvD0v-I7bX4" />-->
+        	android:value="AIzaSyC7c-p21lKScqO8KfLZ_ro1SvD0v-I7bX4" />
         <!--use this if you are using debug.keystore-->
 
         <activity
@@ -58,7 +58,8 @@
         <activity
             android:name=".groceryoverview.GroceryOverView"
             android:label="@string/app_name"
-            android:uiOptions="splitActionBarWhenNarrow">
+            android:uiOptions="splitActionBarWhenNarrow"
+            android:launchMode="singleTop">
             <intent-filter>
 	            <action android:name="android.intent.action.SEARCH" />
 	        </intent-filter>
