--- a/GroceryOTG/AndroidManifest.xml
+++ b/GroceryOTG/AndroidManifest.xml
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.groceryotg.android"
-    android:versionCode="1"
-    android:versionName="1.0">
+          package="com.groceryotg.android"
+          android:versionCode="1"
+          android:versionName="1.0">
 
     <uses-sdk
         android:minSdkVersion="14"
-        android:targetSdkVersion="16" />
-	
+        android:targetSdkVersion="16"/>
+
     <permission
         android:name="com.groceryotg.android.GroceryMapView.permission.MAPS_RECEIVE"
-        android:protectionLevel="signature" />
+        android:protectionLevel="signature"/>
 
-    <uses-permission android:name="com.groceryotg.android.GroceryMapView.permission.MAPS_RECEIVE" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="com.groceryotg.android.GroceryMapView.permission.MAPS_RECEIVE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <uses-feature
         android:glEsVersion="0x00020000"
-        android:required="true" />
-    
+        android:required="true"/>
+
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
@@ -33,10 +33,10 @@
         <!--android:theme can be one of the following: Theme.Sherlock, Theme.Sherlock.Light, or 
          Theme.Sherlock.Light.DarkActionBar, or your custom theme must use one of the 
          aforementioned as its parent. -->
-        
+
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyDzLfi42UpxNSCITqOSlUURhMXj3i6N4BQ" />
+            android:value="AIzaSyDzLfi42UpxNSCITqOSlUURhMXj3i6N4BQ"/>
         <!--android:value="AIzaSyC7c-p21lKScqO8KfLZ_ro1SvD0v-I7bX4" />-->
         <!--use this if you are using debug.keystore-->
 
@@ -44,9 +44,9 @@
             android:name=".CategoryOverView"
             android:label="@string/app_name">
         </activity>
-        
-        <activity 
-            android:name="SplashScreen" 
+
+        <activity
+            android:name="SplashScreen"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
             <intent-filter>
@@ -56,22 +56,28 @@
         </activity>
 
         <activity
+            android:name=".groceryoverview.GroceryFragmentActivity"
+            android:label="@string/app_name">
+        </activity>
+
+        <activity
             android:name=".groceryoverview.GroceryOverView"
             android:label="@string/app_name"
             android:uiOptions="splitActionBarWhenNarrow"
             android:launchMode="singleTop">
             <intent-filter>
-	            <action android:name="android.intent.action.SEARCH" />
-	        </intent-filter>
-	        <meta-data android:name="android.app.searchable"
-	                   android:resource="@xml/searchable" />
+                <action android:name="android.intent.action.SEARCH"/>
+            </intent-filter>
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable"/>
         </activity>
 
         <activity
             android:name=".ShopCartOverView"
             android:label="@string/app_name">
         </activity>
-        
+
         <activity
             android:name=".ShopCartDetailView"
             android:label="@string/app_name">
@@ -81,19 +87,19 @@
             android:name=".GroceryMapView"
             android:label="@string/app_name">
         </activity>
-		
-        <service android:name=".services.NetworkHandler" />
-        <service android:name="com.groceryotg.android.services.Location.LocationMonitorService" />
-		
-        <receiver android:name="com.groceryotg.android.services.Location.LocationMonitor" />
-        <receiver android:name="com.groceryotg.android.services.Location.LocationReceiver" />
+
+        <service android:name=".services.NetworkHandler"/>
+        <service android:name="com.groceryotg.android.services.Location.LocationMonitorService"/>
+
+        <receiver android:name="com.groceryotg.android.services.Location.LocationMonitor"/>
+        <receiver android:name="com.groceryotg.android.services.Location.LocationReceiver"/>
 
         <provider
             android:name=".database.contentprovider.GroceryotgProvider"
             android:authorities="com.groceryotg.android.database.contentprovider">
         </provider>
-        
-	
+
+
     </application>
 
 </manifest>
