--- a/GroceryOTG/AndroidManifest.xml
+++ b/GroceryOTG/AndroidManifest.xml
@@ -57,14 +57,9 @@
 
         <activity
             android:name=".groceryoverview.GroceryFragmentActivity"
-            android:label="@string/app_name">
-        </activity>
-
-        <activity
-            android:name=".groceryoverview.GroceryOverView"
-            android:label="@string/app_name"
             android:uiOptions="splitActionBarWhenNarrow"
-            android:launchMode="singleTop">
+            android:launchMode="singleTop"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH"/>
             </intent-filter>
