--- a/GroceryOTG/AndroidManifest.xml
+++ b/GroceryOTG/AndroidManifest.xml
@@ -52,6 +52,7 @@
 
         <activity
             android:name=".GroceryFragmentActivity"
+            android:screenOrientation="portrait"
             android:uiOptions="splitActionBarWhenNarrow"
             android:launchMode="singleTop"
             android:label="@string/app_name">
@@ -65,16 +66,19 @@
 
         <activity
             android:name=".ShopCartOverView"
+            android:screenOrientation="portrait"
             android:label="@string/app_name">
         </activity>
 
         <activity
             android:name=".ShopCartDetailView"
+            android:screenOrientation="portrait"
             android:label="@string/app_name">
         </activity>
 
         <activity
             android:name=".GroceryMapView"
+            android:screenOrientation="portrait"
             android:label="@string/app_name">
         </activity>
 
