--- a/GroceryOTG/AndroidManifest.xml
+++ b/GroceryOTG/AndroidManifest.xml
@@ -83,10 +83,10 @@
         </activity>
 
         <service android:name=".services.NetworkHandler"/>
-        <service android:name="com.groceryotg.android.services.Location.LocationMonitorService"/>
+        <service android:name="com.groceryotg.android.services.location.LocationMonitorService"/>
 
-        <receiver android:name="com.groceryotg.android.services.Location.LocationMonitor"/>
-        <receiver android:name="com.groceryotg.android.services.Location.LocationReceiver"/>
+        <receiver android:name="com.groceryotg.android.services.location.LocationMonitor"/>
+        <receiver android:name="com.groceryotg.android.services.location.LocationReceiver"/>
 
         <provider
             android:name=".database.contentprovider.GroceryotgProvider"
