--- a/GroceryOTG/AndroidManifest.xml
+++ b/GroceryOTG/AndroidManifest.xml
@@ -57,8 +57,8 @@
             android:launchMode="singleTop"
             android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.SEARCH"/>
-            </intent-filter>
+	            <action android:name="android.intent.action.SEARCH" />
+	        </intent-filter>
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable"/>
@@ -80,6 +80,19 @@
             android:name=".GroceryMapView"
             android:screenOrientation="portrait"
             android:label="@string/app_name">
+        </activity>
+        
+        <activity
+            android:name=".GlobalSearchActivity"
+            android:uiOptions="splitActionBarWhenNarrow"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:label="@string/app_name">
+            <intent-filter>
+	            <action android:name="android.intent.action.SEARCH" />
+	        </intent-filter>
+		    <meta-data android:name="android.app.searchable"
+	                   android:resource="@xml/searchable_global"/>
         </activity>
 
         <service android:name=".services.NetworkHandler"/>
