--- a/GroceryOTG/AndroidManifest.xml
+++ b/GroceryOTG/AndroidManifest.xml
@@ -95,6 +95,11 @@
 	                   android:resource="@xml/searchable_global"/>
         </activity>
 
+        <activity
+            android:name=".settings.SettingsActivity"
+            android:label="@string/app_name" >
+        </activity>
+
         <service android:name=".services.NetworkHandler"/>
         <service android:name="com.groceryotg.android.services.location.LocationMonitorService"/>
 
