--- a/GroceryOTG/project.properties
+++ b/GroceryOTG/project.properties
@@ -12,6 +12,7 @@
 
 # Project target.
 target=android-16
-android.library.reference.1=libs/ActionBarSherlock4.2.0
-android.library.reference.2=libs/SlidingMenu
-android.library.reference.3=libs/google-play-services_lib
+android.library.reference.1=libs\\ActionBarSherlock4.2.0
+android.library.reference.2=libs\\SlidingMenu
+android.library.reference.3=libs\\google-play-services_lib
+android.library.reference.4=libs/cwac-merge
