--- a/GroceryOTG/AndroidManifest.xml
+++ b/GroceryOTG/AndroidManifest.xml
@@ -67,6 +67,7 @@
         <activity
             android:name=".ShopCartOverView"
             android:screenOrientation="portrait"
+            android:uiOptions="splitActionBarWhenNarrow"
             android:label="@string/app_name">
         </activity>
 
