--- a/GroceryOTG/AndroidManifest.xml
+++ b/GroceryOTG/AndroidManifest.xml
@@ -84,7 +84,7 @@
         </activity>
         
         <activity
-            android:name=".GlobalSearchActivity"
+            android:name=".GlobalSearchFragmentActivity"
             android:uiOptions="splitActionBarWhenNarrow"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
