--- a/GroceryOTG/AndroidManifest.xml
+++ b/GroceryOTG/AndroidManifest.xml
@@ -65,7 +65,7 @@
         </activity>
 
         <activity
-            android:name=".ShopCartOverView"
+            android:name=".ShopCartOverviewFragmentActivity"
             android:screenOrientation="portrait"
             android:uiOptions="splitActionBarWhenNarrow"
             android:label="@string/app_name">
