--- a/GroceryOTG/AndroidManifest.xml
+++ b/GroceryOTG/AndroidManifest.xml
@@ -78,7 +78,7 @@
         </activity>
 
         <activity
-            android:name=".GroceryMapView"
+            android:name=".GroceryMapActivity"
             android:screenOrientation="portrait"
             android:label="@string/app_name">
         </activity>
