--- a/GroceryOTG/AndroidManifest.xml
+++ b/GroceryOTG/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.groceryotg.android"
           android:versionCode="1"
-          android:versionName="1.0">
+          android:versionName="@string/version_name">
 
     <uses-sdk
         android:minSdkVersion="10"
