--- a/GroceryOTG/AndroidManifest.xml
+++ b/GroceryOTG/AndroidManifest.xml
@@ -12,15 +12,16 @@
         android:name="com.groceryotg.android.GroceryMapView.permission.MAPS_RECEIVE"
         android:protectionLevel="signature"/>
 
+	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
     <uses-permission android:name="com.groceryotg.android.GroceryMapView.permission.MAPS_RECEIVE"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
-    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true"/>
@@ -106,6 +107,12 @@
 
         <receiver android:name="com.groceryotg.android.services.location.LocationMonitor"/>
         <receiver android:name="com.groceryotg.android.services.location.LocationReceiver"/>
+        <receiver
+        	android:name="com.groceryotg.android.services.location.LocationServiceReceiver" >
+        	<intent-filter>
+        		<action android:name="android.intent.action.BOOT_COMPLETED" />
+        	</intent-filter>
+        </receiver>
 
         <provider
             android:name=".database.contentprovider.GroceryotgProvider"
