--- a/GroceryOTG/AndroidManifest.xml
+++ b/GroceryOTG/AndroidManifest.xml
@@ -56,7 +56,7 @@
             android:screenOrientation="portrait"
             android:uiOptions="splitActionBarWhenNarrow"
             android:launchMode="singleTop"
-            android:label="@string/app_name">
+            android:label="@string/title_main">
             <intent-filter>
 	            <action android:name="android.intent.action.SEARCH" />
 	        </intent-filter>
@@ -69,19 +69,19 @@
             android:name=".ShopCartOverviewFragmentActivity"
             android:screenOrientation="portrait"
             android:uiOptions="splitActionBarWhenNarrow"
-            android:label="@string/app_name">
+            android:label="@string/title_cart">
         </activity>
 
         <activity
             android:name=".ShopCartDetailView"
             android:screenOrientation="portrait"
-            android:label="@string/app_name">
+            android:label="@string/title_cart_detail">
         </activity>
 
         <activity
             android:name=".GroceryMapActivity"
             android:screenOrientation="portrait"
-            android:label="@string/app_name">
+            android:label="@string/title_map">
         </activity>
         
         <activity
@@ -89,7 +89,7 @@
             android:uiOptions="splitActionBarWhenNarrow"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
-            android:label="@string/app_name">
+            android:label="@string/title_search">
             <intent-filter>
 	            <action android:name="android.intent.action.SEARCH" />
 	        </intent-filter>
@@ -99,7 +99,7 @@
 
         <activity
             android:name=".settings.SettingsActivity"
-            android:label="@string/app_name" >
+            android:label="@string/title_settings" >
         </activity>
 
         <service android:name=".services.NetworkHandler"/>
