--- a/GroceryOTG/AndroidManifest.xml
+++ b/GroceryOTG/AndroidManifest.xml
@@ -42,23 +42,35 @@
         <!--use this if you are using debug.keystore-->
 
         <activity
-            android:name="SplashScreen"
+            android:name=".SplashScreenActivity"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        
+        <activity
+            android:name=".CategoryTopFragmentActivity"
+            android:screenOrientation="portrait"
+            android:launchMode="singleTop"
+            android:label="@string/title_main" >
+            <intent-filter>
+	            <action android:name="android.intent.action.SEARCH"/>
+	        </intent-filter>
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable"  />
+        </activity>
 
         <activity
-            android:name=".GroceryFragmentActivity"
+            android:name=".GroceryPagerFragmentActivity"
             android:screenOrientation="portrait"
-            android:uiOptions="splitActionBarWhenNarrow"
             android:launchMode="singleTop"
-            android:label="@string/title_main">
+            android:label="@string/title_grocery_pager" >
             <intent-filter>
-	            <action android:name="android.intent.action.SEARCH" />
+	            <action android:name="android.intent.action.SEARCH"/>
 	        </intent-filter>
             <meta-data
                 android:name="android.app.searchable"
@@ -68,33 +80,31 @@
         <activity
             android:name=".ShopCartOverviewFragmentActivity"
             android:screenOrientation="portrait"
-            android:uiOptions="splitActionBarWhenNarrow"
-            android:label="@string/title_cart">
+            android:label="@string/title_cart" >
         </activity>
 
         <activity
-            android:name=".ShopCartDetailView"
+            android:name=".ShopCartDetailActivity"
             android:screenOrientation="portrait"
-            android:label="@string/title_cart_detail">
+            android:label="@string/title_cart_detail" >
         </activity>
 
         <activity
-            android:name=".GroceryMapActivity"
+            android:name=".MapFragmentActivity"
             android:screenOrientation="portrait"
-            android:label="@string/title_map">
+            android:label="@string/title_map" >
         </activity>
         
         <activity
             android:name=".GlobalSearchFragmentActivity"
-            android:uiOptions="splitActionBarWhenNarrow"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
-            android:label="@string/title_search">
+            android:label="@string/title_search" >
             <intent-filter>
-	            <action android:name="android.intent.action.SEARCH" />
+	            <action android:name="android.intent.action.SEARCH"/>
 	        </intent-filter>
 		    <meta-data android:name="android.app.searchable"
-	                   android:resource="@xml/searchable_global"/>
+	                   android:resource="@xml/searchable_global" />
         </activity>
 
         <activity
