--- a/GroceryOTG/project.properties
+++ b/GroceryOTG/project.properties
@@ -14,3 +14,4 @@
 target=android-16
 android.library.reference.1=libs/ActionBarSherlock4.2.0
 android.library.reference.2=libs/google-play-services_lib
+android.library.reference.3=libs/SlideExpandableListView1.1.0
