--- a/GroceryOTG/AndroidManifest.xml
+++ b/GroceryOTG/AndroidManifest.xml
@@ -36,6 +36,7 @@
 		android:required="true"/>
 
 	<application
+		android:name="GroceryApplication"
 		android:allowBackup="true"
 		android:label="@string/app_name"
 		android:icon="@drawable/ic_launcher"
