--- a/GroceryGo-Bootstrap/Gemfile
+++ b/GroceryGo-Bootstrap/Gemfile
@@ -1,11 +1,13 @@
 source 'https://rubygems.org'
+ruby '1.9.3'
 
 gem 'rails', '3.2.13'
 
 # Bundle edge Rails instead:
 # gem 'rails', :git => 'git://github.com/rails/rails.git'
 
-gem 'sqlite3'
+gem 'pg'
+gem 'thin'
 
 
 # Gems used only for assets and not required
