--- a/GroceryGo-Android/project.properties
+++ b/GroceryGo-Android/project.properties
@@ -13,6 +13,6 @@
 # Project target.
 target=android-16
 android.library.reference.1=libs\\SlideExpandableListView1.1.0
-android.library.reference.2=libs\\google-play-services_lib
-android.library.reference.3=libs\\ActionBarSherlock4.2.0
-android.library.reference.4=libs/Crouton
+android.library.reference.2=libs\\ActionBarSherlock4.2.0
+android.library.reference.3=libs\\Crouton
+android.library.reference.4=libs/google-play-services_lib
