Implemented ShopCart summary of cost by store parent

--- a/GroceryGo-Android/AndroidManifest.xml
+++ b/GroceryGo-Android/AndroidManifest.xml
@@ -102,6 +102,11 @@
             android:name=".ShopCartAddFragmentActivity"
             android:label="@string/title_cart_detail">
         </activity>
+        
+        <activity
+            android:name=".ShopCartSummaryFragmentActivity"
+            android:label="@string/title_cart_summary">
+        </activity>
 
         <activity
             android:name=".MapFragmentActivity"
