--- a/GroceryGo-Android/libs/google-play-services_lib/ant.properties
+++ b/GroceryGo-Android/libs/google-play-services_lib/ant.properties
@@ -15,7 +15,7 @@
 #  'key.alias' for the name of the key to use.
 # The password will be asked during the build when you use the 'release' target.
 
-key.store=./release.keystore
+key.store=../release.keystore
 key.alias=grocerygo
 key.store.password=E4twyawl
 key.alias.password=E4twyawl
