--- a/GroceryGo-AmazonServer/web/WEB-INF/web.xml
+++ b/GroceryGo-AmazonServer/web/WEB-INF/web.xml
@@ -5,5 +5,7 @@
     xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
     version="3.0"
     metadata-complete="false">
-
+<listener>
+    <listener-class>ca.grocerygo.server.ContextFinalizer</listener-class>
+</listener>
 </web-app>
